--- a/Abkuerzungen.tex
+++ b/Abkuerzungen.tex
@@ -22,4 +22,5 @@
 	\acro{XML}{Extensible Markup Language}
 	\acro{ES6}{ECMAScript Spezifikation 6}
 	\acro{CMS}{Content Management System}
+	\acro{TER}{TYPO3 Extension Repository}
 \end{acronym}
