--- a/Inhalt/Projektplanung.tex
+++ b/Inhalt/Projektplanung.tex
@@ -13,16 +13,16 @@ Für die Umsetzung des Projektes standen 70 Stunden zur Verfügung, die im Vorfe
 \subsection{Abweichungen vom Projektantrag}
 \label{sec:AbweichungenProjektantrag}
 
-Einige Abweichungen bestehen in der Zeitplanung, da während der Antragstellung die Anforderungen an das Projekt noch nicht klar definiert waren und dementsprechend die Planung nur sehr grob ausfiel. Nach der Anforderungsanalyse und mithilfe des Lastenheftes konnte die Planung deutlich genauer vorgenommen werden. Außerdem wurde auf das Erstellen eines Pflichtenheftes verzichtet. Inhaltlich stimmt das Projekt ansonsten mit dem Projektantrag überein.
+Einige Abweichungen bestehen in der Zeitplanung, da während der Antragstellung die Anforderungen an das Projekt noch nicht klar definiert waren und dementsprechend die Planung nur sehr grob ausfiel. Nach der Anforderungsanalyse und mithilfe des Lastenheftes konnte die Planung deutlich genauer vorgenommen werden. Außerdem wurde auf das Erstellen eines Pflichtenheftes verzichtet. Inhaltlich stimmt das Projekt ansonsten mit dem Projektantrag überein. Desweiteren wird vorerst darauf verzichtet, das Projekt nach Abschluss als Open Source Projekt zu veröffentlichen und in das \ac{TER} zu deployen. Dies soll in einem der folgenden Meilensteine verwirklicht werden.
 
 
 \subsection{Ressourcenplanung}
 \label{sec:Ressourcenplanung}
 
-Zur Umsetzung des Projektes wurden Hardware-, Software und Personalressourcen benötigt. Eine Aufstellung der verwendeten Ressourcen findet sich im \Anhang{app:Ressourcen}. Bei den verwendeten Bibliotheken wurde darauf geachtet, dass diese kostenfrei mit einer Open Source Lizenz verfügbar sind, damit anfallende Kosten gering gehalten werden und das fertige Tool ohne Lizenzprobleme in Kundenprojekte integriert werden kann.
+Zur Umsetzung des Projektes wurden Hardware-, Software und Personalressourcen benötigt. Eine Aufstellung der verwendeten Ressourcen findet sich im \Anhang{app:Ressourcen}. Bei den verwendeten Bibliotheken wurde stets darauf geachtet, dass diese kostenfrei unter einer Open Source Lizenz verfügbar sind, damit anfallende Kosten möglichst gering gehalten werden und das fertige Tool ohne Lizenzprobleme in Kundenprojekte integriert werden kann.
 
 
 \subsection{Entwicklungsprozess}
 \label{sec:Entwicklungsprozess}
 
-Da die Anforderungen an das Projekt klar und überschaubar sind, eignet sich dafür ein einfaches Wasserfallmodell. Dafür wurden anhand der Zeitplanung die Tickets im Ticketsystem angelegt und der zeitliche Ablauf in einem Gantt-Diagramm dargestellt. Dieses ist im Anhang zu finden %TODO
+Da die Anforderungen an das Projekt klar und überschaubar sind, eignet sich dafür ein einfaches Wasserfallmodell. Anhand der Zeitplanung (\Anhang{app:Zeitplanung}) konnten im Ticketsystem die entsorechenden Tickets angelgt und abgearbeitet werden.
