--- a/Inhalt/Projektplanung.tex
+++ b/Inhalt/Projektplanung.tex
@@ -11,9 +11,9 @@ Für die Umsetzung des Projektes standen 70 Stunden zur Verfügung, die im Vorfe
 \tabelle{Grobe Zeitplanung}{tab:Zeitplanung}{ZeitplanungKurz}
 
 \subsection{Abweichungen vom Projektantrag}
-\label{sec:AbweichungenProjektantrag}
+\label{sec:AbweichungenProjektantrag} 
 
-Einige Abweichungen bestehen in der Zeitplanung, da während der Antragstellung die Anforderungen an das Projekt noch nicht klar definiert waren und dementsprechend die Planung nur sehr grob ausfiel. Nach der Anforderungsanalyse und mithilfe des Lastenheftes konnte die Planung deutlich genauer vorgenommen werden. Außerdem wurde auf das Erstellen eines Pflichtenheftes verzichtet. Inhaltlich stimmt das Projekt ansonsten mit dem Projektantrag überein. Desweiteren wird vorerst darauf verzichtet, das Projekt nach Abschluss als Open Source Projekt zu veröffentlichen und in das \ac{TER} zu deployen. Dies soll in einem der folgenden Meilensteine verwirklicht werden.
+Einige Abweichungen bestehen in der Zeitplanung, da während der Antragstellung die Anforderungen an das Projekt noch nicht klar definiert waren und dementsprechend die Planung nur sehr grob ausfiel. Nach der Anforderungsanalyse und mithilfe des Lastenheftes konnte die Planung deutlich genauer vorgenommen werden. Außerdem wurde auf die Erstellung eines Pflichtenhefts wurde verzichtet, da auf basis des Lastenheftes und der Entwürfe bereits hinreichend Informationen für die Implementierung zur Verfügung standen. Inhaltlich stimmt das Projekt ansonsten mit dem Projektantrag überein. Desweiteren wird vorerst darauf verzichtet, das Projekt nach Abschluss als Open Source Projekt zu veröffentlichen und in das \ac{TER} zu deployen. Dies soll in einem der folgenden Meilensteine verwirklicht werden. 
 
 
 \subsection{Ressourcenplanung}
